<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/post"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/descricao" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        android:layout_span="2"
        android:contentDescription="@string/imagem_postagem_3"
        android:src="@android:color/holo_purple" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        android:layout_span="2"
        android:contentDescription="@string/imagem_postagem_3"
        android:src="@android:color/holo_blue_dark" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        android:layout_span="2"
        android:contentDescription="@string/imagem_postagem_3"
        android:src="@android:color/holo_green_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/imageButtonClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_add_black_24dp"
            android:rotation="45"
            android:tint="#00FFFFFF" />

    </LinearLayout>

</LinearLayout>